media-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-manager-test
  namespace: default
spec:
  serviceAccountName: role-access
  containers:
  - image: europe-west1-docker.pkg.dev/d-com-437216/cluster-repo/media-service:latest
    ports:
    - containerPort: 8080
    imagePullPolicy: IfNotPresent
    name: secret-manager-test
    resources:
      requests:
        cpu: 100m
    stdin: true
    stdinOnce: true
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    tty: true
    volumeMounts:
      - mountPath: "/var/secrets"
        name: mysecret
  volumes:
  - name: mysecret
    csi:
      driver: secrets-store-gke.csi.k8s.io
      readOnly: true
      volumeAttributes:
        secretProviderClass: media-secret
