message-service-schylladb.yaml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scylla
spec:
  serviceName: "scylla"
  replicas: 1
  selector:
    matchLabels:
      app: scylla
  template:
    metadata:
      labels:
        app: scylla
    spec:
      containers:
      - name: scylla
        image: europe-west1-docker.pkg.dev/dkkom-446515/cluster-repo/scylladb
        ports:
        - containerPort: 9042
        volumeMounts:
        - name: scylla-data
          mountPath: /var/lib/scylla
      volumes:
      - name: scylla-data
        persistentVolumeClaim:
          claimName: scylla-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: scylla
spec:
  ports:
    - port: 9042
      targetPort: 9042
  selector:
    app: scylla
  type: ClusterIP
