ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"  # Force SSL redirection
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: api.dkkom.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway-service
            port:
              number: 8080
  - host: dkkom.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
  - host: cdn.dkkom.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: media-service
            port:
              number: 8080
